--- a/grid-area.html
+++ b/grid-area.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid area</title>
+    <link rel="stylesheet" href="styles/grid-area.css">
 </head>
-<body>
-    
+<body class="container">
+    <section>
+        <h2 class="header">The header</h2>
+        <nav class="nav">
+            <ul>
+                <li><a href="">Nav-1</a></li>
+                <li><a href="">Nav-2</a></li>
+                <li><a href="">Nav-3</a></li>
+            </ul>
+        </nav>
+        <main class="main">
+            <article class="article">
+                <h1>Main Article Area</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sapiente consequuntur dolor eum sint excepturi quas! Rem exercitationem numquam perspiciatis dicta. Accusamus ad neque minus perspiciatis repellat quia assumenda impedit?
+            </article>
+        </main>
+        <aside>
+            <div>
+                <h4 class="sidebar">Sidebar</h4>
+            </div>
+            <div>
+                <h4 class="advertise">Advertise</h4>
+            </div>
+        </aside>
+        <footer class="footer">
+            The footer
+        </footer>
+    </section>
+   
 </body>
 </html>
